# Game_of_Life

./: CMakeLists.txt  README.md  include_directories
config/: sim.config
include/: lifeCycle.hpp  python_wrapper.hpp  readConfig.hpp  visual2d.hpp
src/: cmake_config.h.in  lifeCycle.cpp  main.cpp  python_wrapper.cpp  readConfig.cpp  visual2d.cpp
